--- a/src/components/NewsAndEvents.module.css
+++ b/src/components/NewsAndEvents.module.css
@@ -2,7 +2,7 @@
   position: relative;
   height: 100vh;
   width: 100%;
-  padding: clamp(40px, 10vh, 10vh) 0;
+  padding: clamp(60px, 10vh, 10vh) 0;
 }
 .rowNews {
   display: flex;
@@ -103,7 +103,7 @@
 @media only screen and (max-width: 768px) {
   .grid {
     grid-template-columns: repeat(1, 1fr);
-    row-gap: 30px;
+    row-gap: 70px;
   }
   .sectionNews {
     height: 100% !important;
