--- a/src/components/ProjectSlider.module.css
+++ b/src/components/ProjectSlider.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: clamp(40px, 5vh, 5vh) 0;
+  padding: clamp(60px, 5vh, 5vh) 0;
   color: var(--color-white);
   background-image: url("../../public/projectBgHome.jpg");
   background-repeat: no-repeat;
