--- a/src/components/ServiceSlider.module.css
+++ b/src/components/ServiceSlider.module.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: var(--color-dark-blue);
-  padding: clamp(40px, 5vh, 5vh) 0;
+  padding: clamp(60px, 5vh, 5vh) 0;
   color: var(--color-white);
   background-image: url("../../public/homeServiceBg.png");
   background-repeat: no-repeat;
